@@ -40,10 +40,10 @@
 \begin{tabular*}{3.95in}{|>{\columncolor{pcolor2}}l>{\columncolor{pcolor1}}l|} \hline
 \makebox[0.85in][l]{{\bf{-a}}                  } & \makebox[2.76in][l]{Generate an absolute time axis} \\ %\hline
 \makebox[0.85in][l]{{\bf{-b}} $<\!nbits\!>$    } & \makebox[2.76in][l]{Set the number of bits for the output precision} \\
-                                                 & (I8/I16/I32/F32/F64 for nc,nc2,nc4,nc4c; \\
-                                                 &  F32/F64 for grb2,srv,ext,ieg;  1-24 for grb,grb2) \\
+                                                 & (I8/I16/I32/F32/F64 for nc1,nc2,nc4,nc4c; \\
+                                                 &  F32/F64 for grb2,srv,ext,ieg;  1-24 for grb1,grb2) \\
                                                  & Add L or B for Little or Big endian byteorder\\ %\hline
-\makebox[0.85in][l]{{\bf{-f}} $<\!format\!>$   } & \makebox[2.76in][l]{Outputformat: grb,grb2,nc,nc2,nc4,nc4c,srv,ext,ieg} \\ %\hline
+\makebox[0.85in][l]{{\bf{-f}} $<\!format\!>$   } & \makebox[2.76in][l]{Outputformat: grb1,grb2,nc1,nc2,nc4,nc4c,srv,ext,ieg} \\ %\hline
 \makebox[0.85in][l]{{\bf{-g}} $<\!grid\!>$     } & \makebox[2.76in][l]{Grid or file name} \\
                                                  & Grid names: {\tt r<NX>x<NY>}, {\tt n<N>}, {\tt gme<NI>} \\ %\hline
 \makebox[0.85in][l]{{\bf{-h}}                  } & \makebox[2.76in][l]{Help information for the operators} \\ %\hline
