@@ -24,8 +24,8 @@ The following options are available for all operators:
               \hline
               \rowcolor{pcolor2}
                 \sl $<$format$>$ & \sl $<$nbits$>$ \\
-                {\tt grb, grb2}           & {\tt P1 - P24}              \\
-                {\tt nc, nc2, nc4, nc4c}  & {\tt I8/I16/I32/F32/F64}  \\
+                {\tt grb1, grb2}           & {\tt P1 - P24}              \\
+                {\tt nc1, nc2, nc4, nc4c}  & {\tt I8/I16/I32/F32/F64}  \\
                 {\tt grb2, srv, ext, ieg}       & {\tt F32/F64}             \\
               \hline
               \end{tabular}
@@ -45,10 +45,10 @@ The following options are available for all operators:
               \hline
               \rowcolor{pcolor2}
               {\bf File format}          & \sl $<$format$>$ \\
-               GRIB version 1            & {\tt grb}  \\
+               GRIB version 1            & {\tt grb1/grb}  \\
                GRIB version 2            & {\tt grb2} \\
-               NetCDF                    & {\tt nc}   \\
-               NetCDF version 2 (64-bit) & {\tt nc2}  \\
+               NetCDF                    & {\tt nc1}   \\
+               NetCDF version 2 (64-bit) & {\tt nc2/nc}  \\
                NetCDF-4 (HDF5)           & {\tt nc4}  \\
                NetCDF-4 classic          & {\tt nc4c} \\
                SERVICE                   & {\tt srv}  \\
